@@ -1,3 +1,10 @@
+TAG: alleleload-6-0-4-2
+DATE: 06/27/2016
+STAFF: lec 
+CHANGES: TR12377
+1) makeIKMC.py : remove "\n" from ikmcNote
+2) makeIKMC.py/makeAllele.py : fixed documentation
+
 TAG: alleleload-6-0-4-1
 DATE: 04/28/2016
 STAFF: lec 
